# growi_rag_mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
data/chroma/: chroma.sqlite3
src/: __init__.py  config.py  embedding_model.py  embedding_pipeline.py  exceptions.py  growi_client.py  health.py  llm_summarizer.py  logging_config.py  main.py  metrics.py  middleware.py  models.py  page_filter.py  sync_scheduler.py  text_chunker.py  tool_registry.py  vector_store.py
src/core/: __init__.py
src/embedding/: __init__.py  store.py
src/growi/: __init__.py  client.py  page_filter.py  sync_scheduler.py
src/llm/: __init__.py  summarizer.py
src/mcp/: handlers.py  server.py  tools.py
src/mcp_handlers/: __init__.py  (+1 more)
tests/: conftest.py  test_config.py  test_docker_deployment.py  test_e2e_mcp_growi_integration.py  test_embedding_pipeline.py  test_embedding_plamo_model.py  test_embedding_plamo_model_integration.py  test_error_code_standardization.py  test_exceptions.py  test_final_integration_validation.py  test_growi_client.py  test_growi_client_auth_v3.py  test_growi_page_model.py  test_growi_pages_pagination.py  test_growi_retry_backoff.py  test_health.py  test_health_monitoring.py  test_llm_summarization.py  test_logging_config.py  test_mcp_growi_rag_search_integration.py  test_mcp_growi_retrieve_vector_integration.py  test_mcp_integration_client_tools.py  test_mcp_request_response_handling.py  test_mcp_server_tcp_handshake.py  test_mcp_tools_registry_and_routing.py  test_middleware.py  test_page_filter.py  test_project_setup.py  test_sync_scheduler.py  test_sync_scheduler_actual_api.py  test_sync_scheduler_production.py  test_text_chunker.py  test_vector_search_input_validation.py  test_vector_similarity_search.py  test_vector_store_chroma.py
(+8 files in other folders)
