[project]
name = "growi-rag-mcp"
version = "0.1.0"
description = "Retrieval Augmented Generation MCP server for GROWI wiki integration"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "chromadb>=0.4.0",
    "langchain>=0.2.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.24.0",
    "uvloop>=0.17.0",
    "toml>=0.10.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
    "mypy>=1.18.1",
    "requests>=2.32.5",
    "numpy>=2.3.3",
    "sentencepiece>=0.2.1",
    "openai>=1.107.3",
    "fastmcp>=2.12.3",
    "mcp-server>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "toml>=0.10.2",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "toml>=0.10.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
